[package]
name    = "d1_wasm_vm_bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name    = "bench_wasmvm"
harness = false

[dependencies]
# CosmWasm VM — runs compiled WASM bytecode in an isolated Wasmer sandbox.
# Version 1.5 matches the cosmwasm-std 1.5.x used by the contract.
# "cranelift" selects the Cranelift compiler backend, matching production
# wasmd (which also uses Cranelift).  Without this feature, cosmwasm-vm
# defaults to Singlepass — a fast-compile / slow-execute backend that
# inflates microbenchmark results by ~10–20× vs production.
cosmwasm-vm  = { version = "1.5", features = ["iterator", "staking", "cranelift"] }
cosmwasm-std = "1.5"

# Proof generation (mirrors the contract's own dependencies)
bulletproofs          = { version = "4.0.0", default-features = false }
curve25519-dalek-ng   = { version = "4.1.1", default-features = false, features = ["alloc", "u64_backend"] }
merlin                = { version = "3", default-features = false }
rand                  = "0.8"
rand_core             = { version = "0.6", default-features = false }
hex                   = "0.4"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
